# paimon-full-text

./: .asf.yaml  .gitattributes  .gitignore  Cargo.toml  DEPENDENCIES.rust.tsv  README.md  about.hbs  about.toml  deny.toml
.github/workflows/: ci.yml  publish_snapshot.yml  release-java.yml  release-python-publish.yml  release-python.yml  release-rust.yml
core/: Cargo.toml
core/src/: archive_directory.rs  config.rs  error.rs  index.rs  io.rs  lib.rs  query.rs  storage.rs  tokenizer.rs
core/tests/: core_roundtrip.rs
core/tests/golden/: storage_v1_envelope.hex
docs/: java-api.md  paimon-integration.md  python-api.md  storage-format.md
docs/designs/: 2026-07-04-paimon-full-text-index.md
docs/plans/: 2026-07-04-paimon-full-text-index-implementation.md
ffi/: Cargo.toml
ffi/src/: lib.rs
include/: paimon_ftindex.h
java/: pom.xml
java/src/main/java/org/apache/paimon/index/fulltext/: FullTextIndexInput.java  FullTextIndexOutput.java  FullTextIndexReader.java  FullTextIndexWriter.java  FullTextNative.java  FullTextQuery.java  FullTextReadMetrics.java  FullTextSearchResult.java
java/src/test/java/org/apache/paimon/index/fulltext/: FullTextNativeRoundTripTest.java
jni/: Cargo.toml
jni/src/: lib.rs
licenses/: BINARY-LICENSE-APPENDIX
licenses/python/: THIRD-PARTY-LICENSES.html
python/: pyproject.toml  setup.py
python/licenses/aarch64-apple-darwin/: THIRD-PARTY-LICENSES.html
python/licenses/aarch64-unknown-linux-gnu/: THIRD-PARTY-LICENSES.html
python/licenses/x86_64-pc-windows-msvc/: THIRD-PARTY-LICENSES.html
python/licenses/x86_64-unknown-linux-gnu/: THIRD-PARTY-LICENSES.html
python/paimon_ftindex/: LICENSE  __init__.py  _ffi.py  query.py  reader.py  writer.py
python/tests/: test_roundtrip.py
tools/: FullTextIndexJarSmokeTest.java  README.md  check_license_headers.py  create_source_release.sh  deploy_java_staging.sh  generate_license_reports.py  smoke_test_python_wheel.py  test_deploy_java_staging.sh  verify_java_jars.py  verify_python_wheels.py
