[package]
name = "paimon-ftindex-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
