[package]
name = "paimon-ftindex-core"
version = "0.1.0"
description = "Apache Paimon Full Text — core Rust library"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
levenshtein_automata.workspace = true
roaring.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
tantivy-common.workspace = true
tantivy-fst.workspace = true
tantivy-jieba.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
