# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "paimon-ftindex-core"
version = "0.1.0"
description = "Apache Paimon Full Text — core Rust library"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
levenshtein_automata.workspace = true
roaring.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
tantivy-common.workspace = true
tantivy-fst.workspace = true
tantivy-jieba.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
