[package]
name = "paimon-ftindex-ffi"
version = "0.1.0"
description = "Apache Paimon Full Text C FFI bindings"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "paimon_ftindex_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
paimon-ftindex-core = { path = "../core" }
serde_json.workspace = true

[dev-dependencies]
anyhow.workspace = true
roaring.workspace = true
