[package]
name = "paimon-ftindex-jni"
version = "0.1.0"
description = "Apache Paimon Full Text — JNI bindings for Java"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "paimon_ftindex_jni"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni.workspace = true
paimon-ftindex-core = { path = "../core" }
serde_json.workspace = true

[dev-dependencies]
anyhow.workspace = true
