[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paimon-ftindex"
version = "0.1.0"
description = "Python bindings for Apache Paimon Full Text Index"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["paimon_ftindex*"]

[tool.setuptools.package-data]
paimon_ftindex = [
    "libpaimon_ftindex_ffi.dylib",
    "libpaimon_ftindex_ffi.so",
    "paimon_ftindex_ffi.dll",
]
